Fix hero title and icon alignment on narrower screens (#276)
* Tidy: Remove unused rule

Since flex-nowrap is being used, this has no effect.

* Change: (.hero-title) margin-left: 1em

This prevents the title text from being too close to the left edge of
the screen.

* Fix: (.hero-title) text-align: right

See <https://github.com/scientific-python/scientific-python-hugo-theme/pull/276#issuecomment-1738440595>.

--- a/assets/theme-css/styles.css
+++ b/assets/theme-css/styles.css
@@ -71,7 +71,6 @@ table th {
 }
 
 .hero-title {
-  align-content: center;
   align-items: center;
   display: flex;
   flex-direction: row;
@@ -80,8 +79,10 @@ table th {
   font-size: 6em;
   color: var(--colorText);
   justify-content: center;
+  margin-left: 1em;
   margin-bottom: 0.2em;
   margin-right: 0.5em;
+  text-align: right;
 }
 
 .hero-logo {
